<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="T_Position" Id="{d0b68156-c1bb-0d16-286e-24e439888fe3}">
    <Declaration><![CDATA[// Type alias for represeting position.
TYPE T_Position : LINT; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>